[package]
name = 'substrate-validator-set'
version = '4.0.0-dev'
authors = ['Gautam Dhameja <quasijatt@outlook.com>']
edition = '2018'
license = 'Apache-2.0'
repository = 'https://github.com/gautamdhameja/substrate-validator-set'

[dev-dependencies.serde]
features = ['derive']
version = '1.0.126'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = '4bc2af13cd81007a2a340d0333062179420d5daf'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = '4bc2af13cd81007a2a340d0333062179420d5daf'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = '4bc2af13cd81007a2a340d0333062179420d5daf'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = '4bc2af13cd81007a2a340d0333062179420d5daf'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = '4bc2af13cd81007a2a340d0333062179420d5daf'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = '4bc2af13cd81007a2a340d0333062179420d5daf'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = '4bc2af13cd81007a2a340d0333062179420d5daf'

[dependencies.pallet-session]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = '4bc2af13cd81007a2a340d0333062179420d5daf'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'sp-runtime/std',
    'pallet-session/std'
]
try-runtime = ['frame-support/try-runtime']
